// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> renders properly 1`] = `
<DndProvider
  backend={[Function]}
>
  <Center
    margin="50px"
  >
    <HStack
      alignItems="start"
      spacing={8}
    >
      <Stack>
        <Text
          textAlign="center"
        >
          Your board and hand:
        </Text>
        <HStack>
          <Board
            board={
              [
                [
                  null,
                ],
              ]
            }
          />
          <Hand
            hand={[]}
          />
        </HStack>
      </Stack>
      <Stack>
        <Text
          textAlign="center"
        >
          Tiles remaining in bunch: 
          0
        </Text>
        <PeelButton
          canPeel={false}
          handlePeel={[MockFunction handlePeel]}
          peelWinsGame={true}
        />
        <Dump />
      </Stack>
    </HStack>
  </Center>
</DndProvider>
`;

exports[`<Game /> renders properly with more than one player 1`] = `
<DndProvider
  backend={[Function]}
>
  <Center
    margin="50px"
  >
    <HStack
      alignItems="start"
      spacing={8}
    >
      <Stack>
        <Text
          textAlign="center"
        >
          Your board and hand:
        </Text>
        <HStack>
          <Board
            board={
              [
                [
                  null,
                ],
              ]
            }
          />
          <Hand
            hand={[]}
          />
        </HStack>
      </Stack>
      <Stack>
        <Text
          textAlign="center"
        >
          Tiles remaining in bunch: 
          0
        </Text>
        <PeelButton
          canPeel={false}
          handlePeel={[MockFunction handlePeel]}
          peelWinsGame={true}
        />
        <Dump />
        <Stack>
          <Text
            textAlign="center"
          >
            Opponent board(s):
          </Text>
          <OpponentBoardPreview
            players={
              [
                {
                  "board": [
                    [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": [],
                  "isAdmin": false,
                  "isReady": false,
                  "isTopBanana": false,
                  "userId": "id",
                  "username": "username",
                },
                {
                  "board": [
                    [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": [],
                  "isAdmin": false,
                  "isReady": false,
                  "isTopBanana": false,
                  "userId": "other",
                  "username": "username",
                },
              ]
            }
          />
        </Stack>
      </Stack>
    </HStack>
  </Center>
</DndProvider>
`;
